[package]
name = "manifold-renderer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-gpu = { path = "../manifold-gpu" }
manifold-native = { path = "../manifold-native" }
manifold-playback = { path = "../manifold-playback" }
manifold-ui = { path = "../manifold-ui" }
log = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
half = "2"
serde = { workspace = true }
serde_json = "1"
ahash = { workspace = true }
arc-swap = { workspace = true }
inventory = "0.3"
tiff = "0.9"
naga = { version = "28", features = ["wgsl-in", "msl-out"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "20"
core-graphics = "0.23"
core-foundation = "0.9"

[dev-dependencies]

[[bin]]
name = "check-presets"
path = "src/bin/check_presets.rs"

[[bin]]
name = "freeze-profile"
path = "src/bin/freeze_profile.rs"

[features]

[lints]
workspace = true
