[package]
name = "manifold-renderer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-foundation = { path = "../manifold-foundation" }
manifold-gpu = { path = "../manifold-gpu" }
manifold-native = { path = "../manifold-native" }
manifold-playback = { path = "../manifold-playback" }
manifold-ui = { path = "../manifold-ui" }
log = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
half = "2"
serde = { workspace = true }
serde_json = "1"
ahash = { workspace = true }
arc-swap = { workspace = true }
inventory = "0.3"
tiff = "0.9"
# Still-image decode for node.image_folder. TIFF stays on the dedicated
# `tiff` path above (bit-exact u16/f32 grayscale for MRI scans); `image`
# covers the everyday formats. Lean feature set, no default decoders.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
naga = { version = "28", features = ["wgsl-in", "msl-out"] }
# glTF/.glb parse for node.gltf_mesh_source (node_graph::gltf_load) — a
# production import primitive, not test-only. mesh_snapshot's azalea proof
# test also uses this.
gltf = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "20"
core-graphics = "0.23"
core-foundation = "0.9"

[dev-dependencies]
# Serializes GPU tests on the shared Metal device (see `test_device`). Reentrant
# so a single test may acquire it more than once without deadlocking.
parking_lot = { workspace = true }

[[bin]]
name = "check-presets"
path = "src/bin/check_presets.rs"

[[bin]]
name = "freeze-profile"
path = "src/bin/freeze_profile.rs"

[[bin]]
name = "generate-preset-thumbnails"
path = "src/bin/generate_preset_thumbnails.rs"

[[bin]]
name = "render-generator-preset"
path = "src/bin/render_generator_preset.rs"

# GPU-proof integration binary: the alpha-contract sweep + generator smoke.
# Gated behind `gpu-proofs` (see [features]) so it's excluded from the
# default `cargo test` / `cargo nextest` sweep — run it deliberately with
# `cargo test -p manifold-renderer --features gpu-proofs`.
[[test]]
name = "gpu_proofs"
path = "tests/gpu_proofs/main.rs"
required-features = ["gpu-proofs"]

[features]
# GPU-proof tests: slow, flaky, and need a real Metal device with synchronous
# readback. Off by default so the workspace test sweep stays fast and
# deterministic; opt in with `--features gpu-proofs`. Gates `test_device()`,
# every `mod gpu_tests`, and the `gpu_proofs` integration binary above.
gpu-proofs = []

[lints]
workspace = true
