[package]
name = "manifold-renderer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-foundation = { path = "../manifold-foundation" }
manifold-gpu = { path = "../manifold-gpu" }
manifold-native = { path = "../manifold-native" }
manifold-playback = { path = "../manifold-playback" }
manifold-ui = { path = "../manifold-ui" }
log = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
half = "2"
serde = { workspace = true }
serde_json = "1"
ahash = { workspace = true }
arc-swap = { workspace = true }
inventory = "0.3"
tiff = "0.9"
# Still-image decode for node.image_folder. TIFF stays on the dedicated
# `tiff` path above (bit-exact u16/f32 grayscale for MRI scans); `image`
# covers the everyday formats. Lean feature set, no default decoders.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif", "exr"] }
naga = { version = "28", features = ["wgsl-in", "msl-out"] }
# glTF/.glb parse for node.gltf_mesh_source (node_graph::gltf_load) — a
# production import primitive, not test-only. mesh_snapshot's azalea proof
# test also uses this. IMPORT_FIDELITY_DESIGN.md D5/F-P4: KHR_materials_emissive_strength
# + KHR_materials_transmission (typed presence/factor — transmission stays
# report-only until F-P5 maps it) + extensions (raw JSON sniff for
# KHR_materials_clearcoat, which this crate version has no typed support
# for) + KHR_lights_punctual (IMPORT_DESIGN P1's light mapping needs it;
# enabling here costs nothing — no lights/cameras work happens in F-P4).
# GLB_CONFORMANCE_DESIGN.md G-P4: KHR_texture_transform (typed
# `texture::Info::texture_transform()`) + KHR_materials_specular (typed
# `Material::specular()`) + KHR_materials_ior (typed `Material::ior()`).
# GLB_CONFORMANCE_DESIGN.md G-P5: KHR_materials_clearcoat's factors
# (clearcoatFactor/clearcoatRoughnessFactor) are now MAPPED (second GGX
# lobe) but STILL via the raw-JSON `extension_value` sniff above, not a
# feature flag — VERIFIED this session against both `gltf` and
# `gltf-json` 1.4.1's own `Cargo.toml` (and full source grep): neither
# crate has a `KHR_materials_clearcoat` feature or any typed accessor at
# this pinned version, unlike specular/ior in G-P4. No feature added; no
# new dependency.
# GLB_XFAIL_BURNDOWN_DESIGN.md D2 (BUG-167): KHR_materials_pbrSpecularGlossiness
# HAS typed support at 1.4.1 (`gltf::Material::pbr_specular_glossiness()`,
# `gltf::material::PbrSpecularGlossiness`) — VERIFIED this session by
# reading `gltf-1.4.1/src/material.rs` — unlike clearcoat above. Enabling
# the feature is the whole fix; no raw-JSON sniff needed for this one.
# GLTF_MATERIAL_EXTENSIONS_DESIGN.md E1: KHR_materials_volume HAS typed
# support at 1.4.1 (`Material::volume()`, `gltf::material::Volume` —
# VERIFIED this session: `KHR_materials_volume` is a real Cargo feature on
# both `gltf` and `gltf-json` 1.4.1's own `Cargo.toml`), unlike sheen/
# iridescence/anisotropy/dispersion (E1 raw-JSON sniffs those four — no
# feature or typed accessor exists for them at this pinned version).
gltf = { version = "1", features = [
    "KHR_materials_emissive_strength",
    "KHR_materials_transmission",
    "extensions",
    "KHR_lights_punctual",
    "KHR_texture_transform",
    "KHR_materials_specular",
    "KHR_materials_ior",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_volume",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "20"
core-graphics = "0.23"
core-foundation = "0.9"

[dev-dependencies]
# Serializes GPU tests on the shared Metal device (see `test_device`). Reentrant
# so a single test may acquire it more than once without deadlocking.
parking_lot = { workspace = true }
# FUSION_SOTA P3 census: loads the canonical-fixture-liveschool `.manifold`
# project to walk its `embedded_presets` (per-instance forked/edited graph
# defs) alongside the bundled preset library. Not a new crate-graph edge —
# `renderer` already depends on `playback`, which depends on `io` — so this
# only makes an already-transitive edge direct, test-only, dev-dependency
# scoped. Precedent for the fixture-path resolution: `manifold-io/tests/load_project.rs`.
manifold-io = { path = "../manifold-io" }

[[bin]]
name = "check-presets"
path = "src/bin/check_presets.rs"

[[bin]]
name = "freeze-profile"
path = "src/bin/freeze_profile.rs"

[[bin]]
name = "generate-preset-thumbnails"
path = "src/bin/generate_preset_thumbnails.rs"

[[bin]]
name = "graph-tool"
path = "src/bin/graph_tool.rs"

[[bin]]
name = "render-generator-preset"
path = "src/bin/render_generator_preset.rs"

[[bin]]
name = "render-import"
path = "src/bin/render_import.rs"

# GPU-proof integration binary: the alpha-contract sweep + generator smoke.
# Gated behind `gpu-proofs` (see [features]) so it's excluded from the
# default `cargo test` / `cargo nextest` sweep — run it deliberately with
# `cargo test -p manifold-renderer --features gpu-proofs`.
[[test]]
name = "gpu_proofs"
path = "tests/gpu_proofs/main.rs"
required-features = ["gpu-proofs"]

# glTF conformance harness (GLB_CONFORMANCE_DESIGN.md G-P1): renders each
# Khronos sample asset through the production import path and gates it with
# numeric asserts + self-goldens. Needs a real GPU device, same reasons as
# `gpu_proofs` above — off by default, run with `--features gpu-proofs`.
[[test]]
name = "glb_conformance"
path = "tests/glb_conformance.rs"
required-features = ["gpu-proofs"]

[features]
# GPU-proof tests: slow, flaky, and need a real Metal device with synchronous
# readback. Off by default so the workspace test sweep stays fast and
# deterministic; opt in with `--features gpu-proofs`. Gates `test_device()`,
# every `mod gpu_tests`, and the `gpu_proofs` integration binary above.
gpu-proofs = []

[lints]
workspace = true
