[package]
name = "manifold-spectral"
version = "0.1.0"
edition = "2024"
publish = false

# Shared spectral DSP + spectrogram rendering. The constant-Q transform (CQT/VQT)
# is ported from the Manifold Analyzer VST; the GPU waterfall renderer is a clean
# Manifold-native consumer of it (no egui/GL coupling). Used by the audio worker
# (CPU CQT → magnitude columns) and the Audio Setup panel (columns → texture).

[dependencies]
# Optional: only the GPU waterfall renderer needs it. The CPU CQT (used by the
# audio worker) compiles without it, so manifold-audio stays GPU-free when built
# alone. Enabled by the `gpu` feature, which the app turns on.
manifold-gpu = { path = "../manifold-gpu", optional = true }
log = { workspace = true }
rustfft = "6"

[features]
default = []
gpu = ["dep:manifold-gpu"]
# GPU-readback tests (real Metal device, minutes not seconds) — OFF by default,
# mirroring manifold-renderer's gpu-proofs convention. Run deliberately:
# `cargo test -p manifold-spectral --features gpu-proofs`.
gpu-proofs = ["gpu"]

[dev-dependencies]
# WGSL front-end only, to statically parse + validate the spectrogram shader in
# a unit test (the renderer's runtime path uses manifold-gpu's full pipeline).
naga = { version = "28", features = ["wgsl-in"] }

[lints]
workspace = true
