[package]
name = "manifold-analyzer-gui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
manifold-analyzer-dsp = { path = "../manifold-analyzer-dsp" }
manifold-gpu = { path = "../../crates/manifold-gpu" }

# CQT spectrogram (GUI-side FFT + sparse kernel mul)
rustfft = "6"

# Zero-copy Metal↔GL bridge
glow = "0.16"
egui_glow = "0.31"

# Faster uncontended try_lock + no poisoning (matches MANIFOLD convention).
parking_lot = "0.12"
